KNOWN ISSUES:

- Grenadier bombs resolve to DC 0 under multiplayer
- Tiefling needs better race pictures

CHANGES:

- added Thunderous Smite and Shadow Dagger spells
- fixed melee and unarmed logic
- fixed saving thrown checks on smite spells
- fixed spell DC calculation on heroes with more than one repertoire
- removed Occultist class as causing too much headaches [RESPEC out before update!]